# kirotry1

./: README.md  docker-compose.override.yml  docker-compose.yml
.kiro/specs/amazon-connect-courier-bot/: design.md  requirements.md  tasks.md
backend/: Dockerfile  main.py  pyproject.toml
docker/nginx/: nginx.conf
fastmcp/: .gitkeep  Dockerfile  pyproject.toml  server.py
frontend/: Dockerfile
