[project]
name = "jfglobalexpress-fastmcp"
version = "0.1.0"
description = "FastMCP server for JFGlobalExpress courier services"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "duckdb>=0.9.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"